--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -15,6 +15,7 @@
 *:before {
   box-sizing: border-box;
 }
+
 // Body reset
 // Note: Fonts are stored in the cms.
 // .font-face('Name', 'url + filename', weight in numbers, font style, svg id)
@@ -25,7 +26,7 @@
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   height: 100%;
 }
 
@@ -48,6 +49,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+
   @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
     font-size: @font-size-body;
@@ -85,11 +87,13 @@ body {
   --white: @white-color;
   font-size: 16px;
 }
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
   }
 }
+
 // Reset fonts for relevant elements
 
 button,
@@ -100,6 +104,7 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+
 // Links
 
 a {
@@ -121,6 +126,7 @@ a {
     color: @link-visited-color;
   }
 }
+
 // Figures
 //
 // We reset this here because previously Normalize had no `figure` margins. This
@@ -129,21 +135,25 @@ a {
 figure {
   margin: 0;
 }
+
 // Images
 
 img {
   vertical-align: middle;
 }
+
 // Responsive images (ensure images don't scale beyond their parents)
 
 .img-responsive {
   .img-responsive();
 }
+
 // Rounded corners
 
 .img-rounded {
   border-radius: @border-radius-large;
 }
+
 // Image thumbnails
 //
 // Heads up! This is mixin-ed into thumbnails.less for `.thumbnail`.
@@ -158,11 +168,13 @@ img {
   // Keep them at most 100% wide
   .img-responsive(block);
 }
+
 // Perfect circle
 
 .img-circle {
   border-radius: 50%; // set radius in percents
 }
+
 // Horizontal rules
 
 hr {
@@ -174,6 +186,7 @@ hr {
   width: 100%;
   float: left;
 }
+
 // Only display content to screen readers
 //
 // See: http://a11yproject.com/posts/how-to-hide-content
@@ -185,16 +198,18 @@ hr {
   margin: -1px;
   padding: 0;
   overflow: hidden;
-  clip: rect(0,0,0,0);
+  clip: rect(0, 0, 0, 0);
   clip-path: inset(50%);
   white-space: nowrap;
   border: 0;
 }
+
 // Use in conjunction with .sr-only to only display content when it's focused.
 // Useful for "Skip to main content" links; see http://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
 // Credit: HTML5 Boilerplate
 
 .sr-only-focusable {
+
   &:active,
   &:focus {
     position: static;
@@ -205,6 +220,7 @@ hr {
     clip: auto;
   }
 }
+
 // iOS "clickable elements" fix for role="button"
 //
 // Fixes "clickability" issue (and more generally, the firing of events such as focus as well)
@@ -214,13 +230,16 @@ hr {
 [role="button"] {
   cursor: pointer;
 }
+
 @media (max-width: @screen-sm) {
+
   .btn,
   .form-control {
     // font-size: @font-size-large!important;
-    height: auto!important;
+    height: auto !important;
   }
 }
+
 // Make containing block clickable - parent must be positioned relative.
 
 .stretched-link {
@@ -233,24 +252,22 @@ hr {
     z-index: 1;
     pointer-events: auto;
     content: "";
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
   }
-}
-
-
-.site-content-width {
-  padding: var(--gutterHeight) 0;
-  margin-left: calc(var(--gutterWidth) * -1)!important;
-  margin-right: calc(var(--gutterWidth) * -1)!important;
 }
 
 @media (min-width: @screen-sm-min) {
+  .site-content-width {
+    padding: var(--gutterHeight) 0;
+    margin-left: calc(var(--gutterWidth) * -1) !important;
+    margin-right: calc(var(--gutterWidth) * -1) !important;
+  }
 
   .site-content-width .gccolumn:last-child {
-    padding-right: var(--gutterWidth)!important;
+    padding-right: var(--gutterWidth) !important;
   }
 
   .site-content-width .gccolumn:first-child {
-    padding-left: var(--gutterWidth)!important;
+    padding-left: var(--gutterWidth) !important;
   }
 }
