--- a/docs/assets/css/doctypes/visualfeature.css
+++ b/docs/assets/css/doctypes/visualfeature.css
@@ -426,7 +426,7 @@ video {
   }
 
   .quote blockquote {
-    font-size: 18px;
+    font-size: 20px;
     margin-top: 16px;
     float: right;
   }
@@ -437,6 +437,11 @@ video {
     font-size: 82px;
     color: inherit;
   }
+
+  blockquote footer {
+    font-size: 15px;
+    font-weight: 400;
+}
 
   .quote h2 {
     font-size: 62px;
