--- a/less/panels.less
+++ b/less/panels.less
@@ -48,7 +48,7 @@
 
 .panel-title {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0!important;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.25px;
