--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,7 +29,7 @@
               <a href="{{ site.baseurl }}/javascript{% if site.github %}.html{% endif %}">JavaScript</a>
               </li>
               <li{% if page.slug=="examples" %} class="active" {% endif %}>
-              <a href="{{ site.baseurl }}/examples/ku-default/">KU templates</a>
+                <a href="{{ site.baseurl }}/examples{% if site.github %}.html{% endif %}">Examples</a>
               </li>
             </ul>
             <ul class="nav bs-docs-sidenav">
@@ -41,6 +41,8 @@
                 {% include nav/components.html %}
               {% elsif page.slug == "js" %}
                 {% include nav/javascript.html %}
+                {% elsif page.slug == "examples" %}
+                {% include nav/examples.html %}
               {% elsif page.slug == "customize" %}
                 {% include nav/customize.html %}
               {% elsif page.slug == "about" %}
