--- a/docs/_includes/js/examples.html
+++ b/docs/_includes/js/examples.html
@@ -1,7 +1,7 @@
 <div class="bs-docs-section">
-  <h1 id="affix" class="page-header">Introduction</h1>
+  <h1 id="examples" class="page-header">Examples</h1>
 
-  <h2 id="intro-examples">Examples</h2>
-  <p>See a variety of <a href="{{ site.baseurl }}/examples/ku-default/">KU templates</a></p>
+  <h2 id="intro-examples">Templates</h2>
+  <p>See a basic list of <a href="{{ site.baseurl }}/examples/ku-default/">page templates</a></p>
 
 </div>
