--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,7 +17,12 @@
     <div class="container bs-docs-container">
       <div class="row">
         {% unless page.fullwidth == true %}
-        <div class="col-md-3  ku-leftmenu" role="complementary">
+        <div class="col-md-3" role="complementary">
+          <div class="ku-leftmenu">
+            <div class="ku-navbar-header">
+            <a href="{{ site.baseurl }}/">Styleguide</a>
+          </div>
+          </div>
           <div class="ku-navbar-header">
             <a href="{{ site.baseurl }}/">Styleguide</a>
           </div>
