--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,6 +1,6 @@
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
   <div class="ku-navbar-header">
-    <a tabindex="-1" href="/">Kommunikation</a>
+    <a href="{{ site.baseurl }}/">Styleguide</a>
   </div>
   <nav aria-label="Navigation">
     <ul id="leftmenu" class="nav">
@@ -43,11 +43,6 @@
       <li><a tabindex="-1" href="#">One more link</a></li>
     </ul>
     <ul id="leftmenu_2" class="nav">
-      <li><a tabindex="-1" href="#">Action</a></li>
-      <li><a tabindex="-1" href="#">Separated link</a></li>
-      <li><a tabindex="-1" href="#">One more separated link</a></li>
-    </ul>
-    <ul>
       <li><a tabindex="-1" href="#">Action</a></li>
       <li><a tabindex="-1" href="#">Separated link</a></li>
       <li><a tabindex="-1" href="#">One more separated link</a></li>
