--- a/docs/_includes/components/ku-entries.html
+++ b/docs/_includes/components/ku-entries.html
@@ -1,6 +1,6 @@
 <div class="bs-docs-section">
   <h1 id="ku-entries" class="page-header">Entry bar (indgange)</h1>
-  <p>Component which can hold up to 4 or 5 links (depending on the amount of text) which will de displayed with faculty colors automatically.</p>
+  <p>Component which can hold up to 4 or 5 links (depending on the amount of text).</p>
   <div class="bs-example" data-example-id="ku-entries">
     <div class="entries">
       <div class="entry">
